--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
             <h3 class="h4 mb-2">Educational</h3>
-            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+            <p class="text-muted mb-0 text-left">- NTEE-CC B80: Student Services. <br>- NTEE-CC B82: Scholarships & Student Financial Aid. </p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Charitable</h3>
-            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+            <h3 class="h4 mb-2 ">Charitable</h3>
+            <p class="text-muted mb-0 text-left">- NTEE-CC T40 - Voluntarism Promotion. <br>- NTEE-CC T50: Philanthropy, Charity & Voluntarism Promotion. </p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Small Business</h3>
-            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+            <h3 class="h4 mb-2">Research</h3>
+            <p class="text-muted mb-0 text-left">- NTEE-CC K40: Nutrition. <br>- NTEE-CC U20: General Science. <br>- NTEE-CC U41: Computer Science.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
               <i class="fas fa-4x fa-globe text-primary mb-4"></i>
               <h3 class="h4 mb-2">Fund Raising</h3>
-              <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+              <p class="text-muted mb-0 text-left">- NTEE-CC L12: Fund Raising & Fund Distribution. <br>- NTEE-CC L40: Temporary Housing.</p>
             </div>
           </div>
       </div>
@@ -150,7 +150,7 @@
                 Category
               </div>
               <div class="project-name">
-                  Career Advice for Students
+                  42 Days Challenge
               </div>
             </div>
           </a>
@@ -163,7 +163,7 @@
                 Category
               </div>
               <div class="project-name">
-                Housing for Students
+                Dance Me
               </div>
             </div>
           </a>
@@ -176,7 +176,7 @@
                 Category
               </div>
               <div class="project-name">
-                Housing for Low Income
+                Give a Smile
               </div>
             </div>
           </a>
@@ -189,7 +189,7 @@
                 Category
               </div>
               <div class="project-name">
-                Give a Smile
+                Robotics Tournaments & Hackathons
               </div>
             </div>
           </a>
@@ -202,7 +202,7 @@
                 Category
               </div>
               <div class="project-name">
-                Small Business Support
+                Career Advice for Students
               </div>
             </div>
           </a>
@@ -215,7 +215,7 @@
                 Category
               </div>
               <div class="project-name">
-                Dance Me
+                Housing for Students & Low Income
               </div>
             </div>
           </a>
