--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">Volunteer to perform work charitable, humanitarian, or educational reasons with Deigex Inc. and make a better world.</h2>
-      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Volunteer Now!</a>
+      <a class="btn btn-light btn-xl" href="#contact">Volunteer Now!</a>
     </div>
   </section>
 
