--- a/index.html
+++ b/index.html
@@ -259,9 +259,54 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
+
+      <div class="row">
+        <div class="col-md-5 mb-5">
+          <ul class="list-unstyled list-spaced">
+            <li class="mb-2"><h6 class="text-uppercase">About</h6></li>
+            <li class="text-muted">
+              Deigex Inc. is a 501(c)(3) scientific, educational, and charitable corporation. Is funded by a combination of gifts, grants and contributions and fees for their exempt services as on IRS section 509(a)(2) <a href="mailto: info@deigex.com">(Pending Tax exempt approval).</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-2 offset-md-1 mb-5">
+          <ul class="list-unstyled list-spaced">
+            <li class="mb-2"><h6 class="text-uppercase">Activities</h6></li>
+            <li class="text-muted">42 Days WLC</li>
+            <li class="text-muted">Dance Me</li>
+            <li class="text-muted">Give a Smile</li>
+            <li class="text-muted">Housing</li>
+          </ul>
+        </div>
+        <div class="col-md-2 mb-5">
+          <ul class="list-unstyled list-spaced">
+            <li class="mb-2"><h6 class="text-uppercase">Volunteering</h6></li>
+            <li class="text-muted">Career Advice</li>
+            <li class="text-muted">Hackathons</li>
+            <li class="text-muted">Robotics</li>
+            <li class="text-muted">On Call Advice</li>
+          </ul>
+        </div>
+        <div class="col-md-2 mb-5">
+          <ul class="list-unstyled list-spaced">
+            <li class="mb-2"><h6 class="text-uppercase">Legal</h6></li>
+            <li class="text-muted">Terms</li>
+            <li class="text-muted">Legal</li>
+            <li class="text-muted">Privacy</li>
+            <li class="text-muted">License</li>
+          </ul>
+        </div>
+      </div>
       <div class="small text-center text-muted">Copyright &copy; 2019 - Deigex Inc.</div>
     </div>
   </footer>
+
+  <div class="block block-inverse app-footer">
+    <div class="container">
+
+     </div>
+   </div>
+
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
@@ -277,3 +322,4 @@
 </body>
 
 </html>
+
