--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </div>
         <div class="col-md-2 mb-5">
           <ul class="list-unstyled list-spaced">
-            <li class="mb-2"><h6 class="text-uppercase">Volunteering</h6></li>
+            <li class="mb-2"><h6 class="text-uppercase">Volunteer</h6></li>
             <li class="text-muted">Career Advice</li>
             <li class="text-muted">Hackathons</li>
             <li class="text-muted">Robotics</li>
