--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Double your impact</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">Deigex Inc.</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Now's your chance to do twice as good for your community and the world.</p>
+          <p class="text-white-75 font-weight-light mb-5">California Non-profit Public Benefit Corporation</p>
+          <p class="text-white-75 font-weight-light mb-5">(IRS EZ-1023 form pending approval.</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Match my gyft</a>
         </div>
       </div>
@@ -79,7 +80,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">About Us</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Deigex Inc. is a 501(c)(3) scientific, educational, and charitable corporation. Is funded by a combination of gifts, grants and contributions and fees for their exempt services as on IRS section 509(a)(2).</p>
+          <p class="text-white-50 mb-4">Deigex Inc. is a 501(c)(3) scientific, educational, and charitable corporation. It is funded by a combination of gifts, grants and contributions and fees for their exempt services as on IRS section 509(a)(2).</p>
           <p class="text-white-50 mb-4">(Pending Tax exempt approval).</p>
           <br>
           <br>
