--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5">California Non-profit Public Benefit Corporation</p>
-          <p class="text-white-75 font-weight-light mb-5">(IRS EZ-1023 form pending approval.</p>
+          <p class="text-white-75 font-weight-light mb-5">(IRS EZ-1023 form pending approval)</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Match my gyft</a>
         </div>
       </div>
