--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">California Non-profit Public Benefit Corporation</p>
-          <p class="text-white-75 font-weight-light mb-5">(IRS EZ-1023 form pending approval)</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Match my gyft</a>
+          <p class="text-white-75 font-weight-light mb-5">California Nonprofit Public Benefit Corporation</p>
+          <p class="text-white-75 font-weight-light mb-5">(IRS 1023-EZ form pending approval)</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Support Deigex</a>
         </div>
       </div>
     </div>
