--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5">California Nonprofit Public Benefit Corporation</p>
           <p class="text-white-75 font-weight-light mb-5">(IRS 1023-EZ form pending approval)</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Support Deigex</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Support Deigex Inc.</a>
         </div>
       </div>
     </div>
