--- a/index.html
+++ b/index.html
@@ -110,28 +110,28 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
             <h3 class="h4 mb-2">Educational</h3>
-            <p class="text-muted mb-0 text-left">- NTEE-CC B80: Student Services. <br>- NTEE-CC B82: Scholarships & Student Financial Aid. </p>
+            <p class="text-muted mb-0 text-left">- NTEE-CC B80: Student Services<br>- NTEE-CC B82: Scholarships & Student Financial Aid</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
             <h3 class="h4 mb-2 ">Charitable</h3>
-            <p class="text-muted mb-0 text-left">- NTEE-CC T40 - Voluntarism Promotion. <br>- NTEE-CC T50: Philanthropy, Charity & Voluntarism Promotion. </p>
+            <p class="text-muted mb-0 text-left">- NTEE-CC T40 - Voluntarism Promotion <br>- NTEE-CC T50: Philanthropy, Charity & Voluntarism Promotion</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
             <h3 class="h4 mb-2">Research</h3>
-            <p class="text-muted mb-0 text-left">- NTEE-CC K40: Nutrition. <br>- NTEE-CC U20: General Science. <br>- NTEE-CC U41: Computer Science.</p>
+            <p class="text-muted mb-0 text-left">- NTEE-CC K40: Nutrition <br>- NTEE-CC U20: General Science <br>- NTEE-CC U41: Computer Science</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
               <i class="fas fa-4x fa-globe text-primary mb-4"></i>
               <h3 class="h4 mb-2">Fund Raising</h3>
-              <p class="text-muted mb-0 text-left">- NTEE-CC L12: Fund Raising & Fund Distribution. <br>- NTEE-CC L40: Temporary Housing.</p>
+              <p class="text-muted mb-0 text-left">- NTEE-CC L12: Fund Raising & Fund Distribution <br>- NTEE-CC L40: Temporary Housing</p>
             </div>
           </div>
       </div>
