--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
               <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-              <h3 class="h4 mb-2">Fund Raising</h3>
-              <p class="text-muted mb-0 text-left">- NTEE-CC L12: Fund Raising & Fund Distribution <br>- NTEE-CC L40: Temporary Housing</p>
+              <h3 class="h4 mb-2">Fiscal Sponsorship</h3>
+              <p class="text-muted mb-0 text-left">- NTEE-CC W70: <br>- NTEE-CC S43:</p>
             </div>
           </div>
       </div>
