--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="mt-5">
               <i class="fas fa-4x fa-globe text-primary mb-4"></i>
               <h3 class="h4 mb-2">Fiscal Sponsorship</h3>
-              <p class="text-muted mb-0 text-left">- NTEE-CC W70: <br>- NTEE-CC S43:</p>
+              <p class="text-muted mb-0 text-left">- NTEE-CC W70: Leadership Development<br>- NTEE-CC S43: Small Business Development</p>
             </div>
           </div>
       </div>
