--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">About Us</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Deigex Inc. is organized and operated for scientific, educational, and charitable corporation. It is funded by a combination of gifts, grants and contributions as defined by 26 U.S. Code § 509(a)(2).</p>
+          <p class="text-white-50 mb-4">Deigex Inc. is organized and operated for scientific, educational, and charitable purposes. It is funded by a combination of gifts, grants and contributions as defined by 26 U.S. Code § 509(a)(2).</p>
           <p class="text-white-50 mb-4">(Pending Tax exempt approval).</p>
           <br>
           <br>
