--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="col-lg-8 text-center">
             <h2 class="text-white mt-0">Our Mission</h2>
             <hr class="divider light my-4">
-            <p class="text-white-50 mb-4">Engage with the community to create a better world through education, human kindness, and applied technology.</p>
+            <p class="text-white-50 mb-4">Deigex Inc. mission is to meet  a  previously  unmet  community  need or concern.</p>
             <!-- <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a> -->
 
           </div>
@@ -266,7 +266,8 @@
           <ul class="list-unstyled list-spaced">
             <li class="mb-2"><h6 class="text-uppercase">About</h6></li>
             <li class="text-muted">
-              Deigex Inc. is a 501(c)(3) scientific, educational, and charitable corporation. Is funded by a combination of gifts, grants and contributions and fees for their exempt services as on IRS section 509(a)(2) <a href="mailto: info@deigex.com">(Pending Tax exempt approval).</a>
+              Deigex Inc. is organized and operated for scientific, educational, and charitable purposes. It is funded by a combination of gifts, grants and contributions as defined by 26 U.S. Code § 509(a)(2).</p>
+          <p class="text-white-50 mb-4">(Pending Tax exempt approval). <a href="mailto: info@deigex.com">(Pending Tax exempt approval).</a>
             </li>
           </ul>
         </div>
