--- a/index.html
+++ b/index.html
@@ -266,8 +266,7 @@
           <ul class="list-unstyled list-spaced">
             <li class="mb-2"><h6 class="text-uppercase">About</h6></li>
             <li class="text-muted">
-              Deigex Inc. is organized and operated for scientific, educational, and charitable purposes. It is funded by a combination of gifts, grants and contributions as defined by 26 U.S. Code § 509(a)(2).
-          <a href="mailto: info@deigex.com">(Pending Tax exempt approval).</a>
+              Deigex Inc. is organized and operated for scientific, educational, and charitable purposes. It is funded by a combination of gifts, grants and contributions as defined by 26 U.S. Code § 509(a)(2).<a href="mailto: info@deigex.com">(Pending Tax exempt approval)</a>
             </li>
           </ul>
         </div>
