--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
             <h3 class="h4 mb-2">Educational</h3>
-            <p class="text-muted mb-0 text-left">- NTEE-CC B80: Student Services<br>- NTEE-CC B82: Scholarships & Student Financial Aid</p>
+            <p class="text-muted mb-0 text-left">- NTEE-CC J20: Employment Preparation & Procurement<br>- NTEE-CC J21: Vocational Counseling</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -124,7 +124,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
             <h3 class="h4 mb-2">Research</h3>
-            <p class="text-muted mb-0 text-left">- NTEE-CC K40: Nutrition <br>- NTEE-CC U20: General Science <br>- NTEE-CC U41: Computer Science</p>
+            <p class="text-muted mb-0 text-left">- NTEE-CC U20: General Science <br>- NTEE-CC U41: Computer Science</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
