--- a/index.html
+++ b/index.html
@@ -298,7 +298,8 @@
           </ul>
         </div>
       </div>
-      <div class="small text-center text-muted">Office Address: 177 Park Avenue, Suite 200. San Jose, CA 95127. Copyright &copy; 2019 - Deigex Inc.</div>
+      <div class="small text-center text-muted">Office Address: 177 Park Avenue, Suite 200. San Jose, CA 95127.</div>
+      <div class="small text-center text-muted">Copyright &copy; 2019 - Deigex Inc.</div>
     </div>
   </footer>
 
