--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   </section>
 
   <!-- Portfolio Section -->
-  <section id="portfolio">
+  <!-- <section id="portfolio">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
@@ -223,7 +223,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Call to Action Section -->
   <section class="page-section bg-dark text-white">
@@ -272,11 +272,16 @@
         </div>
         <div class="col-md-2 offset-md-1 mb-5">
           <ul class="list-unstyled list-spaced">
-            <li class="mb-2"><h6 class="text-uppercase">Activities</h6></li>
-            <li class="text-muted">42 Days WLC</li>
-            <li class="text-muted">Dance Me</li>
-            <li class="text-muted">Give a Smile</li>
-            <li class="text-muted">Housing</li>
+            <li class="mb-2"><h6 class="text-uppercase">Important Links</h6></li>
+            <!-- <li class="mb-2"><h6 class="text-uppercase">Activities</h6></li> -->
+            <!-- <li class="text-muted">42 Days WLC</li> -->
+            <!-- <li class="text-muted">Dance Me</li> -->
+            <!-- <li class="text-muted">Housing</li> -->
+            <!-- <li class="text-muted">Give a Smile</li> -->
+            <li class="text-muted"><a>Certificate of status</a></li>
+            <li class="text-muted">Activity Codes</li>
+            <li class="text-muted">Training</li>
+            <li class="text-muted">Matching Gift Program</li>
           </ul>
         </div>
         <div class="col-md-2 mb-5">
