--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
         </div>
         <div class="col-md-2 offset-md-1 mb-5">
           <ul class="list-unstyled list-spaced">
-            <li class="mb-2"><h6 class="text-uppercase">Important Links</h6></li>
+            <li class="mb-2"><h6 class="text-uppercase">Useful Links</h6></li>
             <!-- <li class="mb-2"><h6 class="text-uppercase">Activities</h6></li> -->
             <!-- <li class="text-muted">42 Days WLC</li> -->
             <!-- <li class="text-muted">Dance Me</li> -->
             <!-- <li class="text-muted">Housing</li> -->
             <!-- <li class="text-muted">Give a Smile</li> -->
-            <li class="text-muted"><a>Certificate of status</a></li>
+            <li class="text-muted"><a href="./img/Certificate of Status.pdf">Certificate of Status</a></li>
             <li class="text-muted">Activity Codes</li>
             <li class="text-muted">Training</li>
             <li class="text-muted">Matching Gift Program</li>
