--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
             <!-- <li class="text-muted">Housing</li> -->
             <!-- <li class="text-muted">Give a Smile</li> -->
             <li class="text-muted"><a href="./img/Certificate of Status.pdf">Certificate of Status</a></li>
-            <li class="text-muted">Activity Codes</li>
-            <li class="text-muted">Training</li>
-            <li class="text-muted">Matching Gift Program</li>
+            <li class="text-muted"><a href="http://connectbrevard.org/PubApps/nteeSearch.php?gQry=allMajor&codeType=NTEE">Activity Codes</a></li>
+            <!-- <li class="text-muted">Training</li> -->
+            <li class="text-muted"><a href="https://doublethedonation.com/api/iframe/NDc4NDJkNmYtY2U0">Matching Gift Program</a></li>
           </ul>
         </div>
         <div class="col-md-2 mb-5">
