--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link js-scroll-trigger" href="#services">Activities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Volunteer</a>
+            <a class="nav-link js-scroll-trigger" href="#volunteer">Volunteer</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -226,7 +226,7 @@
   </section> -->
 
   <!-- Call to Action Section -->
-  <section class="page-section bg-dark text-white">
+  <section class="page-section bg-dark text-white" id="volunteer">
     <div class="container text-center">
       <h2 class="mb-4">Volunteer to perform work charitable, humanitarian, or educational reasons with Deigex Inc. and make a better world.</h2>
       <a class="btn btn-light btn-xl" href="#contact">Volunteer Now!</a>
