--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <li class="text-muted">On Call Advice</li>
           </ul>
         </div>
-        <div class="col-md-2 mb-5">
+        <!-- <div class="col-md-2 mb-5">
           <ul class="list-unstyled list-spaced">
             <li class="mb-2"><h6 class="text-uppercase">Legal</h6></li>
             <li class="text-muted">Terms</li>
@@ -301,7 +301,7 @@
             <li class="text-muted">Privacy</li>
             <li class="text-muted">License</li>
           </ul>
-        </div>
+        </div> -->
       </div>
       <div class="small text-center text-muted">Office Address: 177 Park Avenue, Suite 200. San Jose, CA 95127.</div>
       <div class="small text-center text-muted">Copyright &copy; 2019 - Deigex Inc.</div>
