Took out - Pending Tax Exempt Approval

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5">Delaware Charitable Nonstock Exempt Corporation</p>
-          <p class="text-white-75 font-weight-light mb-5">(IRS 1023-EZ form pending approval)</p>
+<!--           <p class="text-white-75 font-weight-light mb-5">(IRS 1023-EZ form pending approval)</p> -->
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Support Deigex Inc.</a>
         </div>
       </div>
@@ -266,7 +266,7 @@
           <ul class="list-unstyled list-spaced">
             <li class="mb-2"><h6 class="text-uppercase">About</h6></li>
             <li class="text-muted">
-              Deigex Inc. is organized and operated for scientific, educational, and charitable purposes. It is funded by a combination of gifts, grants and contributions as defined by 26 U.S. Code § 509(a)(2) <a href="mailto: info@deigex.com"> (Pending Tax exempt approval). </a>
+              Deigex Inc. is organized and operated for scientific, educational, and charitable purposes. It is funded by a combination of gifts, grants and contributions as defined by 26 U.S. Code § 509(a)(2).</a>
             </li>
           </ul>
         </div>
