Tax_Exempt_Determination_Letter.pdf

--- a/index.html
+++ b/index.html
@@ -278,8 +278,9 @@
             <!-- <li class="text-muted">Dance Me</li> -->
             <!-- <li class="text-muted">Housing</li> -->
             <!-- <li class="text-muted">Give a Smile</li> -->
+            <li class="text-muted"><a href="./img/Tax_Exempt_Determination_Letter.pdf">Certificate of Status</a></li>
             <li class="text-muted"><a href="./img/Certificate of Status.pdf">Certificate of Status</a></li>
-            <li class="text-muted"><a href="http://connectbrevard.org/PubApps/nteeSearch.php?gQry=allMajor&codeType=NTEE">Activity Codes</a></li>
+            
             <!-- <li class="text-muted">Training</li> -->
             <li class="text-muted"><a href="https://doublethedonation.com/api/iframe/NDc4NDJkNmYtY2U0">Matching Gift Program</a></li>
           </ul>
@@ -287,7 +288,8 @@
         <div class="col-md-2 mb-5">
           <ul class="list-unstyled list-spaced">
             <li class="mb-2"><h6 class="text-uppercase">Volunteer</h6></li>
-            <li class="text-muted">Career Advice</li>
+<!--             <li class="text-muted">Career Advice</li> -->
+            <li class="text-muted"><a href="http://connectbrevard.org/PubApps/nteeSearch.php?gQry=allMajor&codeType=NTEE">Activity Codes</a></li>
             <li class="text-muted">Hackathons</li>
             <li class="text-muted">Robotics</li>
             <li class="text-muted">On Call Advice</li>
