Tax_Exempt_Determination_Letter 2

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <!-- <li class="text-muted">Dance Me</li> -->
             <!-- <li class="text-muted">Housing</li> -->
             <!-- <li class="text-muted">Give a Smile</li> -->
-            <li class="text-muted"><a href="./img/Tax_Exempt_Determination_Letter.pdf">Certificate of Status</a></li>
+            <li class="text-muted"><a href="./img/Tax_Exempt_Determination_Letter.pdf">Tax Exempt Letter</a></li>
             <li class="text-muted"><a href="./img/Certificate of Status.pdf">Certificate of Status</a></li>
             
             <!-- <li class="text-muted">Training</li> -->
