--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Delaware Charitable Nonstock Exempt Corporation</p>
+          <p class="text-white-75 font-weight-light mb-5">Stronger Together!</p>
 <!--           <p class="text-white-75 font-weight-light mb-5">(IRS 1023-EZ form pending approval)</p> -->
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Support Deigex Inc.</a>
         </div>
