About Us & Menu

--- a/index.html
+++ b/index.html
@@ -74,27 +74,20 @@
 
                         <div id="navbar-menu" class="collapse navbar-collapse ">
                             <ul class="nav navbar-nav" data-in="fadeInDown" data-out="fadeOutUp">
-                                <li class="dropdown">
-                                    <a href="" class="dropdown-toggle" data-toggle="dropdown"
-                                       role="button" aria-expanded="false" title="Home">HOME</a>
-                                    <!-- <ul class="dropdown-menu" role="menu">
-                                        <li><a href="index.html">HOME CHARITY</a></li>
-                                        <li><a href="ecology.html">HOME ECOLOGY</a></li>
-                                        <li><a href="404.html">404 ERROR PAGE</a></li>
-                                        <li><a href="login.html">LOGIN &nbsp;|&nbsp; REGISTER</a></li>
-                                    </ul> -->
-                                </li>
+
+                                <li class="last"><a href="index.html" class="contact" title="Contact">HOME</a></li>
+
                                 <li class="dropdown features-menu">
                                     <a href="about-us.html" class="dropdown-toggle" data-toggle="dropdown"
                                        role="button" aria-expanded="false" title="Features">ABOUT US</a>
                                     <ul class="dropdown-menu" role="menu">
                                         <li><a href="about-us.html" >OUR MISSION</a></li>
-                                        <!-- <li><a href="gallery.html" >THE FOUNDERS</a></li> -->
+                                        <li><a href="about-us.html#who-we-are" >WHO WE ARE</a></li>
+                                        <li><a href="about-us.html#meet-the-team" >MEET THE TEAM</a></li>                                        
                                         <li><a href="Certificate of Status.pdf" >CERTIFICATE OF STATUS</a></li>
                                         <li><a href="Tax_Exempt_Determination_Letter.pdf" >TAX EXEMPT LETTER</a></li>
                                         <li><a href="https://doublethedonation.com/api/iframe/NDc4NDJkNmYtY2U0" >MATCHING GIFT PROGRAM</a></li>
                                     </ul>
-
                                 </li>
 
                                 <li class="dropdown">
