About Us & Donate Link

--- a/about-us.html
+++ b/about-us.html
@@ -127,7 +127,8 @@
                                   </ul>
                               </li> -->
                               <li class="last"><a href="contact.html" class="contact" title="Contact">CONTACT</a></li>
-                              <li class="last"><a href="contact.html" class="contact" title="Contact">DONATE</a></li>
+                              <li class="last"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url"
+                                class="contact" title="Contact">DONATE</a></li>
                           </ul>
                       </div>
 
