--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     <ul class="dropdown-menu" role="menu">
                                         <li><a href="about-us.html" >OUR MISSION</a></li>
                                         <li><a href="about-us.html#who-we-are" >WHO WE ARE</a></li>
-                                        <li><a href="about-us.html#meet-the-team" >MEET THE TEAM</a></li>                                        
+                                        <li><a href="about-us.html#meet-the-team" >MEET THE TEAM</a></li>
                                         <li><a href="Certificate of Status.pdf" >CERTIFICATE OF STATUS</a></li>
                                         <li><a href="Tax_Exempt_Determination_Letter.pdf" >TAX EXEMPT LETTER</a></li>
                                         <li><a href="https://doublethedonation.com/api/iframe/NDc4NDJkNmYtY2U0" >MATCHING GIFT PROGRAM</a></li>
@@ -127,7 +127,8 @@
                                     </ul>
                                 </li> -->
                                 <li class="last"><a href="contact.html" class="contact" title="Contact">CONTACT</a></li>
-                                <li class="last"><a href="contact.html" class="contact" title="Contact">DONATE</a></li>
+                                <li class="last"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url"
+                                  class="contact" title="Contact">DONATE</a></li>
                             </ul>
                         </div>
 
