--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     </div>
 
                     <div class="buttons">
-                        <a href="single-causes.html" class=" red-btn red-btn-4">Donate</a>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url" class=" red-btn red-btn-4">Donate</a>
                     </div>
                 </div>
 
@@ -258,7 +258,7 @@
                     </div>
 
                     <div class="buttons">
-                        <a href="single-causes.html" class=" red-btn red-btn-4">Donate</a>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url" class=" red-btn red-btn-4">Donate</a>
                     </div>
                 </div>
 
@@ -279,7 +279,7 @@
                     </div>
 
                     <div class="buttons">
-                        <a href="single-causes.html" class=" red-btn red-btn-4">Donate</a>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url" class=" red-btn red-btn-4">Donate</a>
                     </div>
                 </div>
             </div>
