--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     <div class="col-lg-8 col-sm-8 col-xs-12 lh">
                         <p>
-                            <a href="food-and-cloths-bank.html" >Click here
+                            <a href="our-causes.html" >Click here
                               to see how we are helping during COVID-19. </a>
                         </p>
                     </div>
@@ -695,7 +695,6 @@
                   </div>
               </div>
           </div>
-
       </footer>
 
     </div>
