--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
                     <div class="contact-social-link">
                         <ul>
                             <!-- <li><a href="https://www.twitter.com/"><i class="icon-tumblr "></i></a></li> -->
-                            <li><a href="https://www.facebook.com/"><i class="icon-facebook "></i></a></li>
+                            <li><a href="https://www.facebook.com/deigex"><i class="icon-facebook "></i></a></li>
                             <!-- <li><a href="https://www.pinterest.com/"><i class="icon-pinterest "></i></a></li>
                             <li><a href="https://vimeo.com/"><i class="icon-vimeo "></i></a></li> -->
                         </ul>
